# google-photos-takeout

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.py
models/: image.py  media_file.py  metadata.py
